Code changes for Java 17
Use "var"
Refactor streams
Use pattern variables
Use new switch